--- a/app/src/main/res/drawable/button_gradient_drawable.xml
+++ b/app/src/main/res/drawable/button_gradient_drawable.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <gradient
+    <!--<gradient
         android:type="linear"
         android:startColor="#5369FF"
         android:endColor="#A76EF1"
-        android:angle="45"/>
+        android:angle="45"/>-->
+
+    <solid
+        android:color="@color/colorPrimary" />
 
     <corners android:radius="30dp" />
 
