--- a/app/src/main/res/layout/one_click_widget.xml
+++ b/app/src/main/res/layout/one_click_widget.xml
@@ -1,30 +1,11 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/widget_button"
+    style="@style/ButtonPrimary"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="@dimen/widget_margin">
-
-    <LinearLayout
-        android:id="@+id/section_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft = "true"
-        android:layout_alignParentStart	= "true"
-        android:layout_alignParentTop = "true"
-        android:orientation = "horizontal">
-
-        <Button
-            android:id="@+id/widget_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:background="@drawable/button_gradient_drawable"
-            android:paddingStart="16dp"
-            android:paddingLeft="16dp"
-            android:paddingEnd="16dp"
-            android:paddingRight="16dp"
-            android:text="One Click"
-            android:textColor="@android:color/white" />
-    </LinearLayout>
-
-</RelativeLayout>
+    android:layout_margin="8dp"
+    android:drawableStart="@drawable/ic_wifi"
+    android:drawablePadding="8dp"
+    android:paddingStart="16dp"
+    android:paddingEnd="16dp"
+    android:text="Login" />
