--- a/app/src/main/res/xml/preferences_oneclick.xml
+++ b/app/src/main/res/xml/preferences_oneclick.xml
@@ -3,9 +3,21 @@
 <androidx.preference.PreferenceScreen
 xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <EditTextPreference
-        app:key="display_name"
-        app:title="Display name"/>
+    <PreferenceCategory
+        app:key="general_category"
+        app:title="General">
+
+        <EditTextPreference
+            app:key="display_name"
+            app:icon="@drawable/ic_account_outline"
+            app:title="Display name"/>
+
+        <SwitchPreferenceCompat
+            app:key="dark_theme"
+            app:icon="@drawable/ic_theme_dark"
+            app:title="Dark theme"/>
+
+    </PreferenceCategory>
 
     <PreferenceCategory
         app:key="login_category"
@@ -14,11 +26,13 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
         <SwitchPreferenceCompat
             app:key="auto_login_app_start"
             app:title="Login when app starts"
+            app:icon="@drawable/ic_login"
             app:summary="Automatically attempt to login when app opens"/>
 
         <SwitchPreferenceCompat
             app:key="auto_login_quicktile"
             app:title="Auto login in quick setting tile"
+            app:icon="@drawable/ic_login"
             app:summary="Automatically attempt to login in quick setting tile"/>
 
     </PreferenceCategory>
@@ -27,14 +41,16 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
         app:key="other_category"
         app:title="Other">
 
-        <SwitchPreferenceCompat
-            app:key="auto_refresh"
-            app:title="Refresh after login"
-            app:summary="After successful login the account details are refreshed automatically"/>
-
         <Preference
             app:key="about"
+            app:icon="@drawable/ic_about_outline"
             app:title="About"/>
+
+        <Preference
+            app:key="license"
+            app:icon="@drawable/ic_code_braces"
+            app:title="License"/>
+
 
     </PreferenceCategory>
 
